--- a/_posts/2015-02-05-deploy-with-git.mkd
+++ b/_posts/2015-02-05-deploy-with-git.mkd
@@ -154,6 +154,7 @@ clear
 
 # Paramétrages (Ne pas ajouter d'espaces)
 # Les 3 premiers sont des chemuns absolus (path entier)
+# Et oui, j'utilise export sans réfléchir par habitude :)
 export DEPL_SITE_GIT="/home/ubuntu/tests"
 export DEPL_SITE_WEB="/home/ubuntu/tests/www"
 export DEPL_JETON="/home/ubuntu/tests/jeton.txt"         # (vide si off)
@@ -173,12 +174,12 @@ export DEPL_FLAG="[OK]"
 [ -z "$DEPL_FROM" ] && DEPL_FROM=$DEPL_EMAIL
 
 # Affiche les paramètres
-echo "Paramètres de deploiement :"
+echo "Paramètres de déploiement :"
 printf "Dossier git : %s\n" "$DEPL_SITE_GIT"
 printf "Site web : %s\n" "$DEPL_SITE_WEB"
 [ ! -z "$DEPL_CHOWN" ] && printf "Propriétaire : %s\n" "$DEPL_CHOWN"
 [ ! -z "$DEPL_JETON" ] && printf "Jeton : %s\n" "$DEPL_JETON" || echo "Jeton 0"
-[ ! -z "$DEPL_EMAIL" ] && printf "Envoie d'email à : %s\n" "$DEPL_EMAIL"
+[ ! -z "$DEPL_EMAIL" ] && printf "Envoie d'e-mail à : %s\n" "$DEPL_EMAIL"
 
 
 # Vérifie qu'on peut envoyer un e-mail
@@ -204,7 +205,7 @@ then
   DEPL_GIT_REPOSITORY="$(git config --get remote.origin.url)"
   if [ $? == 0 ]
   then
-    printf "Depôt git : %s\n" "$DEPL_GIT_REPOSITORY"
+    printf "Dépôt git : %s\n" "$DEPL_GIT_REPOSITORY"
   else
     # Vérifie qu'on a un dépôt GIT paramétré (implicite)
     DEPL_ERRORS=("${DEPL_ERRORS[@]}" "Pas de dépôt GIT dans $DEPL_SITE_GIT.")
@@ -275,7 +276,7 @@ fi
 # E-Mail
 if [ ! -z "$DEPL_EMAIL" ]
 then
-  printf "Envoie de l'email en cours...\n"
+  printf "Envoi de l'e-mail en cours...\n"
   DEPL_SUBJECT="$DEPL_SUBJECT $DEPL_FLAG"
   DEPL_SENDMAIL=("${DEPL_SENDMAIL[@]}" "From: $DEPL_FROM" "Subject: $DEPL_SUBJECT")
   DEPL_SENDMAIL=("${DEPL_SENDMAIL[@]}" "To: $DEPL_EMAIL" "" "$DEPL_MSG" "." "")
